report: Add meta-text to the models of associative memory section.

--- a/report/report.tex
+++ b/report/report.tex
@@ -32,7 +32,7 @@
 \input{sections/1_introduction}
 \input{sections/2_models_of_associative_memory}
 \input{sections/3_current_capabilities}
-%\input{sections/4_future_potential}
+\input{sections/4_future_potential}
 \input{sections/5_conclusion}
 
 % === [ Back matter ] ==========================================================
