--- a/report/sections/1_introduction/1_aim_and_objectives.tex
+++ b/report/sections/1_introduction/1_aim_and_objectives.tex
@@ -1,15 +1,11 @@
 \subsection{Aim and Objectives}
 
-% TODO: Add future potention to aim and objectives if section 4 is ever written :)
-
-%The aim of the project is to investigate the current capabilities and future potential of artificial models for associative memory.
-
-The aim of the project is to investigate the current capabilities of artificial models for associative memory.
+The aim of the project is to investigate the current capabilities and future potential of artificial models for associative memory.
 
 The achieve this aim, the following objectives have been identified.
 
 \begin{enumerate}
 	\item Outline key models for associative memory from different fields of research (e.g. Hopfield, memsistor, ...).
 	\item Compare the capabilities of the ``state of the art'' models for associative memory to that of human potential.
-	%\item Discuss future possibilities if models for associative memory were to reach human or post-human potential.
+	\item Discuss future possibilities if models for associative memory were to reach human or post-human potential.
 \end{enumerate}
