--- a/report/sections/2_models_of_associative_memory.tex
+++ b/report/sections/2_models_of_associative_memory.tex
@@ -1,6 +1,6 @@
 \section{Models of Associative Memory}
 
-% TODO: Add meta-text.
+Three models for associative memory are explored in this section, two traditional machine learning models and one emerging technology. While the traditional models (Hopfield networks and Boltzmann machines) may be considered abstract models defined independent of underlying hardware, they are in practise often employed on commodity hardware with a von-Neumann architecture. The emerging technology (memristors) however, enables a radically different computer architectures on top of which new models for associative memory (and other machine learning tasks) may be developed, and for which existing models may be ported to.
 
 % === [ Subsections ] ==========================================================
 
