--- a/report/sections/3_current_capabilities/3_memory_resistor.tex
+++ b/report/sections/3_current_capabilities/3_memory_resistor.tex
@@ -7,6 +7,10 @@ Several independent research groups have been exploring how to make use of memri
 
 %Proof of concept in 2010, using 3 neurons and 2 synapses to achieve 1 associative memory formation.
 
+% ref: Tim Molter HiPeac Prague 2016 Memristor Keynote
+%
+% Search for "memristor" on Google scholar has been doubling every 18-24 months since 2008.
+
 An experiment was conducted in 2010, which used memristors as artificial synapses to empirically validate the formation of associative memories between three neurons and two synapses (see figure \ref{fig:conditioning_with_artificial_synapses}). In the experiment, two input neurons and one output neuron was used. The input neurons were connected to the output neuron, using one artificial synapse each. When the input neurons were triggered at the same time, their activity became associated to each other, as the resistance of their memristors decreased. This made it possible to activate one neuron, simply by activating the other, which may be compared to the classical experiment by Pavlov where dogs were conditioned to salivate when presented with triggering stimuli, e.g. the sound of a bell.
 
 \begin{figure}[htbp]
