--- a/report/sections/4_future_potential/2_energy_efficiency.tex
+++ b/report/sections/4_future_potential/2_energy_efficiency.tex
@@ -6,6 +6,11 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 
 %Current computer architectures are designed around major bottlenecks, huge amounts of data has to be shuffled back and forth to perform computations. Reaching its limits; transistors now so small that they only allow a single electron to pass through (similar in size to the ion channels). At this scale, problems arise when transistors may allow electrons to pass through, when they shouldn't and wise versa; which leads to unpredictable behaviour (small bursts of ones when should be be all zero, and wise versa.)
 
+% ref: Tim Molter HiPeac Prague 2016 Memristor Keynote
+%
+% Down to 50 Angstroms device size theoretically possible.
+
+
 %The brain, parallel, error correcting, memory efficient. (not doing a lot of unnecessary data shuffling?)
 
 % ref: From BrainScales to Human Brain Project Neuromorphic Computing Coming of Age
