report: Add meta-text to the current capabilities section.

--- a/report/sections/3_current_capabilities.tex
+++ b/report/sections/3_current_capabilities.tex
@@ -1,17 +1,6 @@
 \section{Current Capabilities}
 
-%TODO: Define capabilities in terms of capacity and applications.
-
-%Definitions of capacity.
-%
-%\begin{itemize}
-%\item Absolute capacity.
-%\item Relative capacity.
-%\item Capacity of associative memory
-%\item Relative capacity of recalling process
-%\end{itemize}
-
-% TODO: Add meta-text.
+The current capabilities of the three different models are described both in terms of their capacity to recall associative memories, and in terms of concrete applications for which the models have been used. Comparisons against human-level capabilities are discussed in \ref{sec:future_potential}.
 
 % === [ Subsections ] ==========================================================
 
