report: Move citation from section header to the first relevant paragraph.

--- a/report/sections/3_current_capabilities/1_hopfield_network.tex
+++ b/report/sections/3_current_capabilities/1_hopfield_network.tex
@@ -26,9 +26,9 @@ By then the existence of equilibrium solutions and local stability, the authors 
 \end{figure}
 
 %THIS IS STH EXTRA OUTSIDE HOPFIELD
-\subsection{Experiment on Implicit Memory for Novel Associations between pictures: \\ Effects of Stimulus Unitization and Aging\cite{stimulus_unitization_and_aging}}
+\subsection{Experiment on Implicit Memory for Novel Associations between pictures: \\ Effects of Stimulus Unitization and Aging}
 
-From various previous research, concepts such as associative priming, unitization, difference between conceptual and perceptual associative priming, verbal versus pictorial material/stimuli and roll of spatial proximity were briefly summarized.
+From various previous research, concepts such as associative priming, unitization, difference between conceptual and perceptual associative priming, verbal versus pictorial material/stimuli and roll of spatial proximity were briefly summarized \cite{stimulus_unitization_and_aging}.
 
 Experiments with pictorial stimuli(paired pictures) were done in 3 consecutive stages, where the result from first stage showed no evidence on requirement of spatial contiguity, though associative priming was enhanced compared to with spatially separated stimuli, which proved ``implicit memory for novel associations still can occur in the absence of an emergent conceptual representation''. The second experiment was an extension from the first experiment, with focus on the effects of aging and spatial contiguity of the same topic of stimuli on novel association priming between pictures, where stunning result was shown that ``associative priming is age invariant''(exposure of pictures was longer with older group to yield a matched performance in the baseline). The last experiment was based on both first and second experiments that ``associative priming with pictorial stimuli is modulated by spatial contiguity but not by aging'', and the study proved further evidence for the notion that novel association priming for picture pairs is mediated by the PRS(Perceptual Representation System).
 
