--- a/report/sections/4_future_potential/2_energy_efficiency.tex
+++ b/report/sections/4_future_potential/2_energy_efficiency.tex
@@ -23,9 +23,9 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 %
 % Performance.
 %
-% 10 femtojoul
+% 10 femtojoule
 %
-% 1 joul (in super computers) 10^14
+% 1 joule (in super computers) 10^14
 %
 % Physical models (neuromorphic)
 %
@@ -44,7 +44,7 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 %
 % 12 orders of magnitude
 %
-% Evolution             | > millenia  | > 1000 millenia  | > months    |
+% Evolution             | > millennia  | > 1000 millennia  | > months    |
 %
 % > 15 orders of magnitude
 
@@ -65,7 +65,7 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 % Neuromorphic computing
 % Consistent concept for non-von Neumann, non-Turing computer architecture.
 %
-% Watch the market for Resistor memory, once it is there they will use it for HBP, but using CMOS for now, similar to how von-Neumann used Vaccum tubes before the arrival of the transistor.
+% Watch the market for Resistor memory, once it is there they will use it for HBP, but using CMOS for now, similar to how von-Neumann used Vacuum tubes before the arrival of the transistor.
 
 % ref: http://knowm.org/how-to-build-the-ex-machina-wetware/
 %
@@ -89,4 +89,4 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 %
 % Dr. Kwabena Boahen
 %
-% Comparing the scaling problem of CMOS transistors to traffic. He showed that as CMOS transistors are scaled down, and the number of electron ‘lanes’ get close to one, the devices exhibit extremely high magnitude noise due to individual electrons becoming trapped in local energy minima (pot holes) and blocking the traffic. In essence, when the transistors are large, any “stuck electrons” are easily bypassed and their contribution to the total current is minimal. However, when the devices approach the natural ‘lane width’ of an electron (about 2.7 nm if a remember correctly), a stuck electron could reduce the current by 50% or even shut down the whole device. The answer to these problems, Dr. Boahen believes (and I agree), lie in distributed fault-tolerant analog architectures inspired by the brain.
+% Comparing the scaling problem of CMOS transistors to traffic. He showed that as CMOS transistors are scaled down, and the number of electron ‘lanes’ get close to one, the devices exhibit extremely high magnitude noise due to individual electrons becoming trapped in local energy minima (pot holes) and blocking the traffic. In essence, when the transistors are large, any “stuck electrons” are easily bypassed and their contribution to the total current is minimal. However, when the devices approach the natural ‘lane width’ of an electron (about 2.7 nm if a remember correctly), a stuck electron could reduce the current by 50% or even shut down the whole device. The answer to these problems, Dr. Boahen believes (and I agree), lie in distributed fault-tolerant analogue architectures inspired by the brain.
