--- a/report/sections/1_introduction/1_aim_and_objectives.tex
+++ b/report/sections/1_introduction/1_aim_and_objectives.tex
@@ -5,7 +5,7 @@ The aim of the project is to investigate the current capabilities and future pot
 The achieve this aim, the following objectives have been identified.
 
 \begin{enumerate}
-	\item Outline key models for associative memory from different fields of research (e.g. Hopfield, memsistor, ...).
+	\item Outline key models for associative memory from different fields of research (e.g. Hopfield, memristors, ...).
 	\item Compare the capabilities of the ``state of the art'' models for associative memory to that of human potential.
 	\item Discuss future possibilities if models for associative memory were to reach human or post-human potential.
 \end{enumerate}
