--- a/report/sections/2_models_of_associative_memory/3_memory_resistor.tex
+++ b/report/sections/2_models_of_associative_memory/3_memory_resistor.tex
@@ -32,19 +32,19 @@ Several similarities have been identified between the properties of memristors a
 
 % ref: Tim Molter HiPeac Prague 2016 Memristor Keynote
 %
-% Denser memory, faster read and write, lower energy use, non-volitile, and may represent continuous (i.e. not 0 and 1).
+% Denser memory, faster read and write, lower energy use, non-volatile, and may represent continuous (i.e. not 0 and 1).
 %
 % How do we reach the power efficiency of a brain. "Don't simulate a brain, build a brain"
 %
 % We need to build a brain where the distance between memory and computation is 0.
 %
-% 1 billion fold discipancy between current machine learning platforms and biological brains.
+% 1 billion fold discrepancy between current machine learning platforms and biological brains.
 %
 % We can operate on very low voltages because of the read and write phases that constantly repair relevant state.
 
 % ref: Knowm Collaborates with Kris Campbell at BSU
 %
-% Continous value stored as resistance in a memristor. breaking outside of the 0 and 1 box.
+% Continuous value stored as resistance in a memristor. breaking outside of the 0 and 1 box.
 
 % ref: http://knowm.org/
 %
@@ -72,7 +72,7 @@ Several similarities have been identified between the properties of memristors a
 % >
 % > A kT-bit (thermodynamic bit), a synapse consisting of two memristors.
 % >
-% > Look at the leaf of a plant. Energy dissipating system, constructed of many bifircating channels. Every place where the energy flow splits, you have an AHaH node. You have two competing energy dissipating pathways.
+% > Look at the leaf of a plant. Energy dissipating system, constructed of many bifurcating channels. Every place where the energy flow splits, you have an AHaH node. You have two competing energy dissipating pathways.
 % >
 % > Nature is built of AHaH nodes.
 % >
@@ -82,7 +82,7 @@ Several similarities have been identified between the properties of memristors a
 %
 % > Current digital computing platforms are billions of times less power and space efficient than biology (brains) for synaptic operations.
 % >
-% > It's physically not possible to reach biological level efficiency without significant changes in both architecutre and technology.
+% > It's physically not possible to reach biological level efficiency without significant changes in both architecture and technology.
 % >
 % > "GPU's will save us." `No they won't, they just suck less`
 % >
@@ -94,9 +94,9 @@ Several similarities have been identified between the properties of memristors a
 
 % ref: https://www.youtube.com/watch?v=YOKr8n6Juhs ("Why is AHaH computing so efficient?")
 %
-% > Communication is way faster in technology than biology. 1sec football field, 1sec 7 times around the world.
+% > Communication is way faster in technology than biology. 1 sec football field, 1 sec 7 times around the world.
 % >
-% > Neuron body: 4000-100 000nm
+% > Neuron body: 4000-100 000 nm
 % > Synapses: 500 nm
 % > Viruses: 400-40 nm
 % > Transistor: 28 nm
@@ -116,7 +116,7 @@ Several similarities have been identified between the properties of memristors a
 % > E=(C*V^2)/2
 % >
 % > biology: 0.065V
-% > computer: 1.2v (18x biology) 18^2 -> 324.
+% > computer: 1.2 v (18x biology) 18^2 -> 324.
 % >
 % > Reduce the communication distance and voltage.
 
@@ -124,14 +124,14 @@ Several similarities have been identified between the properties of memristors a
 %
 % > Noise is everywhere.
 % >
-% > Noise margin (analog vs digital).
+% > Noise margin (analogue vs. digital).
 % >
 % > The signal gets corrupted by the noise.
 % >
 % > Memristors. Two meta-stable switches. Potential energy that has to be overcome to have a transition.
 % >
 % > We want: Low power + adaptation ("ability to change")
-% > But: Parts will constantly break (because of noise), decay, volitility
+% > But: Parts will constantly break (because of noise), decay, volatility
 % > Consequently: We need a mechanism of repair.
 % >
 % > The Adaptive Power Problem
@@ -162,7 +162,7 @@ Several similarities have been identified between the properties of memristors a
 % >
 % > E.g. The system will go with the flow, and it will maximize the flow.
 % >
-% > Maximize the dissipatation of energy. The system will evolve in time towards that maximum, intrinsic repair.
+% > Maximize the dissipation of energy. The system will evolve in time towards that maximum, intrinsic repair.
 % >
 % > Have the system evolve itself to solve our problems.
 % >
@@ -176,26 +176,26 @@ Several similarities have been identified between the properties of memristors a
 % >
 % > "Maximization of energy dissipation" - Swenson
 % > "Maximization of currents" - Bejan
-% > "Dissipation-driven adapataion of matter" - England
-% > "Energy dissipation pathways competing for condution resources" as a mechanism.
+% > "Dissipation-driven adaptation of matter" - England
+% > "Energy dissipation pathways competing for conduction resources" as a mechanism.
 
 % ref: https://www.youtube.com/watch?v=CFSrC7kjbJo ("Introduction to AHaH Computing, Alex Nugent, RIT, April 2015")
 %
 % > Focuses on self-organizational building blocks.
 % >
-% > Points of bifercation, branches.
+% > Points of bifurcation, branches.
 % >
 % > Energy dissipating fractal pattern.
 % >
 % > d (the distance) is zero in the brain, has tremendous effects on energy usage.
 % >
-% > A memristor for each pathway, and they are competing with eachother so you need two per synapse. Think of the pair as a synapse itself, and the different in conductance between the two is the value of the synapse. If one is more conductive than the other it is positive, and vise versa, its negative.
+% > A memristor for each pathway, and they are competing with each other so you need two per synapse. Think of the pair as a synapse itself, and the different in conductance between the two is the value of the synapse. If one is more conductive than the other it is positive, and vice versa, its negative.
 % >
 % > Naturally they go towards zero. But if you give them a burst, you can make them positive or negative as you want. Read brings it a little closer together, then reward it.
 % >
-% > Hebbian (erase the path): Any modification to the synaptic weight that reduces the probability the synapic state will remain upon subsequent measurement.
+% > Hebbian (erase the path): Any modification to the synaptic weight that reduces the probability the synaptic state will remain upon subsequent measurement.
 % >
-% > Anti-hebbian (select the path): Any modification to the synaptic weight that increases the probability the synaptic state will remain the same upon subsequent measurement.
+% > Anti-Hebbian (select the path): Any modification to the synaptic weight that increases the probability the synaptic state will remain the same upon subsequent measurement.
 % >
 % > XXX [ IMPORTANT ] XXX
 % >
@@ -203,7 +203,7 @@ Several similarities have been identified between the properties of memristors a
 % >
 % > XXX [/ IMPROTANT ] XXX
 % >
-% > A neuron is this decision making thing. We are finding the decision boundry, a representation of the weights w_0, w_1.
+% > A neuron is this decision making thing. We are finding the decision boundary, a representation of the weights w_0, w_1.
 % >
 % > Maximize the classification margin.
 % >
@@ -218,7 +218,7 @@ Several similarities have been identified between the properties of memristors a
 % >
 % > Nature has a universal adaptive building block.
 % >
-% > Interacting collectives of this builing block solves the problems that the brain solves.
+% > Interacting collectives of this building block solves the problems that the brain solves.
 % >
 % > memristors empower (not replace) our digital computers.
 
@@ -236,9 +236,9 @@ Several similarities have been identified between the properties of memristors a
 %
 % A memristor is the electronic equivalent of an adaptive container!
 %
-% “Anti-Hebbian and Hebbian” in honor of Donald O. Hebb
+% “Anti-Hebbian and Hebbian” in honour of Donald O. Hebb
 %
-% “Knowm’s Synapse” or “Nature’s Transistor”. Two competing energy dissipation pathways.
+% “Knowm's Synapse” or “Nature’s Transistor”. Two competing energy dissipation pathways.
 %
 % As a voltage (pressure) is applied to a memristor, its conductance will change.
 %
